--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,44 +1,11 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Don't track content of these folders
-package-lock.json
+# dependencies
+node_modules
 
-node_modules/
+# production
+build
 
-
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
+# misc
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+npm-debug.log
