--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,33 @@
   "private": true,
   "devDependencies": {
     "react-scripts": "^3.0.0",
-    "react-test-renderer": "^16.8.6"
+    "react-test-renderer": "^16.8.6",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.4.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1"
   },
   "dependencies": {
+    "antd": "^3.24.3",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
+    "is-empty": "^1.2.0",
+    "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
-    "redux": "^4.0.1",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "todomvc-app-css": "^2.2.0"
   },
@@ -20,7 +38,19 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test --env=node"
+    "test": "react-scripts test --env=node",
+    "precommit": "SET NODE_ENV=production lint-staged"
+  },
+
+  "lint-staged": {
+    "*.js": [
+      "pretty-quick --staged",
+      "eslint src/ --fix",
+      "git add"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
