--- a/client/package.json
+++ b/client/package.json
@@ -7,20 +7,38 @@
     "react-test-renderer": "^16.8.6"
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "antd": "^3.24.3",
     "axios": "^0.19.0",
+    "chalk": "^3.0.0",
+    "chart.js": "^2.9.3",
+    "chartist": "^0.11.4",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
+    "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-chartist": "^0.14.2",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.8.6",
+    "react-lines-ellipsis": "^0.14.1",
+    "react-number-format": "^4.3.1",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "routes.js": "0.0.1",
+    "styled-components": "^4.4.1",
     "todomvc-app-css": "^2.2.0"
   },
   "scripts": {
