--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "1612704",
-  "version": "0.0.0",
-  "private": true,
+  "name": "project-tutor-backend-admin",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
-    "config": "^3.2.3",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "~4.0.4",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "http-errors": "^1.7.3",
     "moment": "^2.24.0",
-    "morgan": "~1.9.1",
-    "mysql": "^2.17.1",
-    "nodemon": "^1.19.4",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.7.11",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "socket.io": "^2.3.0",
-    "ws": "^7.2.0",
-    "wss": "^3.3.4"
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
+    "@babel/runtime": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "@babel/core": "^7.7.2",
+    "eslint": "^6.6.0"
   }
 }
